graphql-parser/tests/snapshots/tests__fail_querry__parse_query__win.snap
---
source: graphql-parser/tests/tests.rs
expression: result
---
Err(
    ParseError(
        "Parse error at 1:1\nUnexpected `querry[Name]`\nExpected `{`, `query`, `mutation`, `subscription` or `fragment`\n",
    ),
)
